--- a/src/index.css
+++ b/src/index.css
@@ -18,8 +18,8 @@ h1 {
 }
 .wheel-area {
   position: relative;
-  width: 300px;
-  height: 300px;
+  width: 500px;
+  height: 500px;
   margin: 0 auto 2rem;
 }
 .wheel {
@@ -48,19 +48,20 @@ h1 {
   left: 50%;
   top: 50%;
   transform-origin: 0 0;
+  text-align: center;
   font-weight: bold;
   color: #fff;
 }
 .pointer {
   position: absolute;
   left: 50%;
-  top: -25px;
+  top: 0;
   transform: translateX(-50%);
   width: 0;
   height: 0;
   border-left: 20px solid transparent;
   border-right: 20px solid transparent;
-  border-bottom: 30px solid #fbbf24;
+  border-top: 30px solid #fbbf24;
   filter: drop-shadow(0 0 6px rgba(0,0,0,0.7));
   cursor: pointer;
 }
