--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,7 @@ h1 {
   top: 50%;
   transform-origin: 0 0;
   text-align: center;
+  font-size: 1.5rem;
   font-weight: bold;
   color: #fff;
 }
@@ -110,4 +111,7 @@ h1 {
   padding: 0.5rem 1.2rem;
   border-radius: 8px;
   cursor: pointer;
+}
+.modal-box h2 {
+  font-size: 2rem;  /* adjust as desired */
 }
